--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,10 @@
   width: 100%;
   background: #fff;
   position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
   padding: 15px 0px 15px 0px;
-  position: fixed;
-  top: 0;
 }
 
 .header-inner  {
@@ -36,33 +37,26 @@
 }
 
 .keyvisual {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 78px;
-  position: relative;
-}
-
-img {
-  display: block;
-  margin: auto;
-  width: 1403px;
+  text-align: center;
+  background-image: url("../img/keyvisual/keyvisual.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .title {
   font-size: 65px;
   font-weight: 700;
   color: #6ba7ed;
-  position: absolute;
-  top: 400px;
+  padding-top: 400px;
 }
 
 .subtitle {
   font-size: 40px;
   font-weight: 700;
   color: #ffffff;
-  position:absolute;
-  bottom: 400px;
+  margin-top: 30px;
+  padding-bottom: 400px;
 }
 
 .work_contents {
@@ -70,37 +64,37 @@ img {
   justify-content: center;
   background: #e3f2fd;
   margin: 0 auto;
-  width: 1403px;
+  width: 100%;
 }
 
 .work_contents > div {
   text-align: center;
-  margin-top: 50px;
+  padding-top: 50px;
 }
 
 .work img {
   width: 250px;
-  margin-left: 100px;
-  margin-right: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .text_home .ttl {
   font-size: 40px;
   letter-spacing: 10px;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .text_home .description {
   font-size: 15px;
   line-height: 18px;
   word-break: break-all;
-  margin-top: 35px;
+  padding-top: 35px;
 }
 
 .head_home {
   display: flex;
   justify-content: center;
-  margin: 50px;
+  padding: 50px;
 }
 
 .head_home .ttl {
@@ -126,12 +120,12 @@ img {
 }
 
 .skills_img:nth-child(n+4) {
-  margin-bottom: 70px;
+  padding-bottom: 70px;
 }
 
 .plan{
   background: #d0dfea;
-  width: 1403px;
+  width: 100%;
   height: 460px;
   margin: 0 auto;
 }
@@ -145,13 +139,13 @@ img {
 .plan_contents .ttl {
   font-size: 40px;
   letter-spacing: 10px;
-  margin-top: 50px;
+  padding: 50px 0px 50px 0px;
 }
 
 .cell--table {
   table-layout: fixed;
   width: 100%;
-  margin: 50px 0px 50px 0px;
+  padding: 50px 0px 50px 0px;
 }
 
 .cell--table th {
@@ -186,7 +180,7 @@ img {
   text-align: center;
   margin: 0 auto;
   background: #e3f2fd;
-  width: 1403px;
+  width: 100%;
 }
 
 .sns_list:hover {
@@ -201,7 +195,7 @@ img {
 
 .footer {
   background: #cfd8dc;
-  width: 1403px;
+  width: 100%;
   margin: 0 auto;
 }
 
