--- a/css/style.css
+++ b/css/style.css
@@ -36,19 +36,24 @@
   transition: 0.3s;
 }
 
+main {
+  padding-top: 78px;
+}
+
 .keyvisual {
   text-align: center;
   background-image: url("../img/keyvisual/keyvisual.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  padding-top: 400px;
+  padding-bottom: 400px;
 }
 
 .title {
   font-size: 65px;
   font-weight: 700;
   color: #6ba7ed;
-  padding-top: 400px;
 }
 
 .subtitle {
@@ -56,26 +61,26 @@
   font-weight: 700;
   color: #ffffff;
   margin-top: 30px;
-  padding-bottom: 400px;
+}
+
+.work {
+  padding-top: 50px;
+  background: #e3f2fd;
+  width: 100%;
 }
 
 .work_contents {
   display: flex;
   justify-content: center;
-  background: #e3f2fd;
-  margin: 0 auto;
-  width: 100%;
 }
 
 .work_contents > div {
   text-align: center;
-  padding-top: 50px;
+  flex: 4 6;
 }
 
 .work img {
   width: 250px;
-  padding-left: 100px;
-  padding-right: 100px;
 }
 
 .text_home .ttl {
@@ -91,10 +96,14 @@
   padding-top: 35px;
 }
 
+.skills {
+  padding-top: 50px;
+  padding-bottom: 70px;
+}
+
 .head_home {
   display: flex;
   justify-content: center;
-  padding: 50px;
 }
 
 .head_home .ttl {
@@ -104,14 +113,13 @@
 
 .skills_contents {
   display: flex;
-  justify-content:space-between;
-  flex-wrap: wrap;
-  row-gap:100px;
+  justify-content: center;
 }
 
 .skills_img img {
   width: 300px;
   height: 300px;
+  padding:50px;
   opacity: 0.7;
 }
 
@@ -119,15 +127,15 @@
   opacity: 1.0;
 }
 
-.skills_img:nth-child(n+4) {
-  padding-bottom: 70px;
+.skills_img img:nth-child(n+4) {
+  padding-bottom: 0px;
 }
 
 .plan{
   background: #d0dfea;
   width: 100%;
-  height: 460px;
   margin: 0 auto;
+  padding: 50px 0px 50px 0px;
 }
 
 .plan_contents {
@@ -139,13 +147,15 @@
 .plan_contents .ttl {
   font-size: 40px;
   letter-spacing: 10px;
-  padding: 50px 0px 50px 0px;
+}
+
+.table--area {
+  padding-top: 50px;
 }
 
 .cell--table {
   table-layout: fixed;
   width: 100%;
-  padding: 50px 0px 50px 0px;
 }
 
 .cell--table th {
@@ -174,29 +184,33 @@
   background: #e0efff;
 }
 
+.sns {
+  width: 100%;
+  background: #e3f2fd;
+  padding: 200px 0px 200px 0px;
+}
+
 .sns_list {
   display: flex;
   justify-content: center;
   text-align: center;
   margin: 0 auto;
-  background: #e3f2fd;
-  width: 100%;
 }
 
-.sns_list:hover {
+.sns:hover {
   background: #fff;
   transition: 0.5s;
 }
 
 .sns_list > li {
   padding: 25px 0px 25px 0px;
-  margin: 200px 0px 200px 0px;
 }
 
 .footer {
   background: #cfd8dc;
   width: 100%;
   margin: 0 auto;
+  padding: 20px 0px 20px 0px;
 }
 
 .footer-inner {
@@ -207,7 +221,6 @@
 .copyright {
   font-size: 10px;
   letter-spacing: 0.5px;
-  padding: 20px 0px 20px 0px;
 }
 
 
