--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@
   transition: 0.3s;
 }
 
+.humberger {
+  display: none;
+}
+
 main {
   padding-top: 78px;
 }
@@ -243,10 +247,125 @@ main {
   letter-spacing: 0.5px;
 }
 
+@media screen and (max-width: 1199px) {
+  .inner {
+    width: 97%;
+  }
 
+  .keyvisual {
+    padding-top: 250px;
+    padding-bottom: 250px;
+  }
 
+  .work {
+    padding: 50px 0px 50px 0px;
+  }
 
+  .work_contents {
+    display: block;
+  }
 
+  .description br {
+    display: none;
+  }
 
+  .img-inner {
+    width: 100%;
+  }
+  
+  .text_home-inner {
+    width: 100%;
+  }
 
+  .skills_contents {
+    display: block;
+  }
 
+  .skills_contents li  {
+    margin-right: 0px;
+    margin-top: 0px;
+  }
+
+  .skills_contents li:nth-child(3n+4) {
+    margin-top: 80px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header nav{
+    display: none;
+  }
+
+  .humberger {
+    position: relative;
+    height: 46px;
+    width: 46px;
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: #fff;
+    border: 2px solid #cfd8dc;
+    border-radius: 4px;
+  }
+
+  .humberger div {
+    position: absolute;
+    left: 7px;
+    height: 2px;
+    width: 28px;
+    background-color: #cfd8dc;
+    border: 2px solid #cfd8dc;
+    border-radius: 2px;
+    display: inline-block;
+    box-sizing: border-box;
+  }
+
+  .humberger div:nth-of-type(1) {
+    bottom: 30px;
+  }
+
+  .humberger div:nth-of-type(2) {
+    bottom: 20px;
+  }
+
+  .humberger div:nth-of-type(3) {
+    bottom: 10px;
+  }
+
+  .keyvisual {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+
+  .title {
+    font-size: 40px;
+  }
+  
+  .subtitle {
+    font-size: 30px;
+  }
+
+  .cell--table th {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .cell--table td {
+    font-size: 12px;
+  }
+
+  .sns_list {
+    display: block;
+  }
+
+  .sns {
+    padding: 50px 0px 50px 0px;
+  }
+
+  .sns_icon a {
+    width: 100%;
+  }
+
+  .sns_list > .sns_icon {
+    padding: 50px 15px 50px 15px;
+  }
+}
